# template_actix

./: .env  Cargo.toml
src/: main.rs  state.rs
src/config/: db.rs
src/handlers/: hello_world.rs
src/routes/: hello_world.rs  mod.rs
