[package]
name = "template-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = "4"
bcrypt = "0.15.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
jsonwebtoken = "9.1.0"
sea-orm = { version = "0.12.7", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
sea-orm-cli = "0.12.6"
